# brandscope-ai

./: .env.example  .gitignore  README.md  bash.example  debug_filename.py  debug_simple_test.py  makefile  ollama_test_results.json  phase2_validation_results.json  pure_llm_test.py  pyproject.toml  repo_structure.txt  requirements.txt  simple_archetype_test.py  simple_llm_test.py  test_error_handling.py  test_error_simple.py  test_filename_fix.py  test_fixes.py  test_stage1_manual.py  test_stage1_simple.py  test_stage1_stage2_integration.py  test_validate_prompt_injection.py
docs/: Phase 1 - Intelligent Pipeline Automation - Detailed Architecture.md
projects/: .projects_index.json
src/: cli.py  init.py  main.py
src/commands/: stage1.py  stage2.py
src/core/: init.py  project_manager.py
src/integration/: phase2_integration.py
src/llm/: ollama_client.py
src/migration/: phase2_migration.py
src/models/: brand.py  init.py  project.py
src/stage1/: archetype_builder.py  attribute_extractor.py  init.py  prompt_generator.py  query_generator.py
src/stage1/llm/: archetype_builder.py  attribute_extractor.py  query_generator.py
src/stage2/: __init__.py  conflict_resolver.py  prompt_executor.py  prompt_template_injector.py  stage1_data_loader.py  validation.py
src/utils/: config.py  exceptions.py  logging.py  security.py
tests/: conftest.py  test_basic.py  test_ollama_integration.py  test_security.py
tests/integration/: test_stage1_orchestration.py
tests/unit/: test_models.py
